# omega

./: .env.example  .gitignore  AGENTS.md  DESIGN-UI.md  Justfile  PLAN.md  README.md  SCHEMA-8-MUTANTS.md  backlog.md  bunfig.toml  knip.config.ts  knip.json  manifest.md  omega_agent.py  omega_tool_demo.txt  orientation.md  package.json  playwright.config.ts  rust-migration.md  test.md  tmp.md  tsconfig.json
crates/omega-agent/: Cargo.toml
crates/omega-agent/src/: agent.rs  config.rs  controls.rs  error_classify.rs  event_sink.rs  input_queue.rs  lib.rs  session_resume.rs  system_prompt.rs
crates/omega-agent/src/agent/: context.rs  inject.rs  lifecycle.rs  mod.rs  resume.rs  run_loop.rs  stream_assembly.rs  util.rs
crates/omega-agent/tests/: defensive.rs  goldens.rs  internal.rs
crates/omega-agent/tests/common/: mod.rs
crates/omega-cli/: Cargo.toml
crates/omega-cli/src/: main.rs
crates/omega-cli/tests/: cli.rs
crates/omega-cli/tests/snapshots/: cli__happy_path_stderr.snap  cli__help_stdout.snap  cli__help_stdout.snap.new
crates/omega-core/: Cargo.toml
crates/omega-core/src/: ollama.rs  provider.rs  types.rs
crates/omega-core/tests/: anthropic.rs  retry.rs
crates/omega-core/tests/common/: mod.rs
crates/omega-core/tests/snapshots/: anthropic__streams_text_thinking_and_tool_use.snap
crates/omega-mock-server/: Cargo.toml
crates/omega-mock-server/src/: lib.rs  main.rs
crates/omega-mock-server/tests/: control.rs
crates/omega-server/: Cargo.toml
crates/omega-server/src/: cli.rs  lib.rs  main.rs  router.rs  session.rs  ws_message.rs
crates/omega-server/tests/: http.rs  ws.rs  ws_router.rs
crates/omega-server/tests/common/: mod.rs
crates/omega-server/tests/snapshots/: ws_router__set_effort_frame.snap  ws_router__turn_end_session_info.snap
crates/omega-tools/: Cargo.toml
crates/omega-tools/src/: cap_and_tee.rs  lib.rs  monitors.rs  output_cleaner.rs  process_util.rs  python_repl.rs  schemas.rs  state.rs  tool_ctx.rs  tools.rs
crates/omega-tools/src/python_repl/: bootstrap.rs  output.rs  repl.rs  sentinel.rs  tee.rs  wrapper.rs
crates/omega-tools/src/tools/: fetch_url.rs  grep_files.rs  list_files.rs  monitor.rs  read_file.rs  run_command.rs  stop_monitor.rs  write_file.rs
crates/omega-tools/tests/: file_tools.rs  network_tools.rs  process_tools.rs
crates/omega-types/: Cargo.toml
crates/omega-types/src/: conversation.rs  events.rs  feature_flags.rs  ids.rs  lib.rs  stream_signal.rs  tools.rs
crates/omega-types/tests/: events_reference.rs
crates/omega-types/tests/common/: mod.rs
crates/omega-types/tests/snapshots/: events_reference__all_26_variants_reference.snap  events_reference__all_27_variants_reference.snap  events_reference__all_31_variants_reference.snap  events_reference__all_32_variants_reference.snap
frontends/leptos/: Cargo.toml  STYLE-MAPPING.md  Trunk.toml  index.html  style.css
frontends/leptos/.cargo/: config.toml
frontends/leptos/src/: completion.rs  composer.rs  context_modal.rs  diff_render.rs  dirty_modal.rs  event_view.rs  feed.rs  http.rs  lib.rs  main.rs  markdown.rs  mermaid.js  monitors_panel.rs  picker.rs  protocol.rs  queue_panel.rs  sessions.rs  store.rs  text_modal.rs  usage_panel.rs  ws.rs
frontends/leptos/tests/: snapshots.rs
frontends/leptos/tests/snapshots/: snapshots__composer_states__snap_composer_halt_requested.snap  snapshots__composer_states__snap_composer_halted.snap  snapshots__composer_states__snap_composer_idle.snap  snapshots__composer_states__snap_composer_pause_requested.snap  snapshots__composer_states__snap_composer_pause_requested_pre_committed.snap  snapshots__composer_states__snap_composer_paused.snap  snapshots__composer_states__snap_composer_running.snap  snapshots__monitors_panel_snapshots__snap_monitors_badge_empty_roster_shows_idle_label.snap  snapshots__monitors_panel_snapshots__snap_monitors_badge_mixed_with_fired.snap  snapshots__monitors_panel_snapshots__snap_monitors_badge_one_running_no_fired.snap  snapshots__monitors_panel_snapshots__snap_monitors_modal_open_empty_roster.snap  snapshots__monitors_panel_snapshots__snap_monitors_modal_running_with_stderr.snap  snapshots__monitors_panel_snapshots__snap_monitors_modal_stopped_no_stderr.snap  snapshots__monitors_panel_snapshots__snap_monitors_panel_open_empty_roster.snap  snapshots__monitors_panel_snapshots__snap_monitors_panel_running_with_stderr.snap  snapshots__monitors_panel_snapshots__snap_monitors_panel_stopped_no_stderr.snap  snapshots__snap_event_agent_error.snap  (+49 more)
rust/: Cargo.toml  HASH-1-MUTANTS.md  PHASE-1d.0-NOTES.md  SCHEMA-8-MUTANTS.md
rust/.cargo/: config.toml  mutants.toml
rust/bindings/: AgentErrorEvent.ts  CompactedEvent.ts  ContentBlock.ts  ContextHash.ts  ContextRecord.ts  ContinueMode.ts  EffortChangedEvent.ts  InterruptReason.ts  LlmCallEvent.ts  LlmErrorEvent.ts  LlmResponseEvent.ts  LlmResponseUsage.ts  LlmRetryEvent.ts  LlmRetryReason.ts  ModelChangedEvent.ts  OmegaEvent.ts  PauseRequestedEvent.ts  ResumingSessionEvent.ts  Role.ts  ServerStartedEvent.ts  ServerStopOutcome.ts  ServerStoppedEvent.ts  SessionMetadata.ts  SessionResumedEvent.ts  SessionStartedEvent.ts  StreamSignal.ts  ToolCallEvent.ts  ToolResultEvent.ts  TransportErrorEvent.ts  TurnContinuedEvent.ts  TurnEndEvent.ts  TurnInterruptedEvent.ts  TurnMetrics.ts  TurnPausedEvent.ts  UserMessageEvent.ts
rust/crates/omega-agent/: Cargo.toml  build.rs
rust/crates/omega-cli/: Cargo.toml
rust/crates/omega-core/: Cargo.toml
rust/crates/omega-e2e/: Cargo.toml
rust/crates/omega-mock-server/: Cargo.toml
rust/crates/omega-protocol/: Cargo.toml
rust/crates/omega-server/: Cargo.toml
rust/crates/omega-store/: Cargo.toml
rust/crates/omega-test-fixtures/: Cargo.toml
rust/crates/omega-tools/: Cargo.toml
rust/crates/omega-types/: Cargo.toml
rust/mutants.out/: lock.json  missed.txt  mutants.json  outcomes.json
rust/mutants.out.old/: lock.json  outcomes.json
rust/mutants.out.old/diff/: crates__omega-protocol__src__events.rs_line_115_col_5.diff  crates__omega-protocol__src__events.rs_line_115_col_5_001.diff
(+404 files in other folders)
