[package]
name    = "omega-cli"
version = "0.1.15"
edition.workspace = true

[[bin]]
name = "omega"
path = "src/main.rs"

[lints]
workspace = true

[dev-dependencies]
assert_cmd          = "2"
insta               = { version = "1", features = ["json", "redactions"] }
serde_json          = "1"
tempfile            = "3"
tokio               = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
omega-test-fixtures = { path = "../omega-test-fixtures" }

[dependencies]
dotenvy     = "0.15"
clap         = { version = "4", features = ["derive"] }
tokio        = { version = "1", features = ["macros", "rt-multi-thread", "rt", "signal"] }
futures      = "0.3"
omega-core   = { path = "../omega-core" }
omega-store  = { path = "../omega-store" }
omega-agent  = { path = "../omega-agent" }
omega-tools  = { path = "../omega-tools" }
omega-types  = { path = "../omega-types" }
tokio-util   = { version = "0.7", features = ["rt"] }
