[package]
name    = "omega-mock-server"
version = "0.1.0"
edition.workspace = true

# This crate exists *only* to provide a deterministic test fixture binary
# (`mock-omega-server`) for the Playwright real-server suite. It hosts the
# production `omega-server` together with an internal axum-based
# Anthropic-shaped SSE fake on a random 127.0.0.1 port, plus a tiny
# control HTTP server on a separate port for test scripting / inspection.
#
# Not shipped to end users.  Not depended on by any other crate.

[[bin]]
name = "mock-omega-server"
path = "src/main.rs"

[lib]
name = "omega_mock_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
axum                = { version = "0.8" }
clap                = { version = "4", features = ["derive"] }
tokio               = { version = "1", features = ["full"] }
omega-core          = { path = "../omega-core" }
omega-server        = { path = "../omega-server" }
omega-test-fixtures = { path = "../omega-test-fixtures" }

[dev-dependencies]
http-body-util      = "0.1"
serde_json          = "1"
tower               = { version = "0.5", features = ["util"] }
