[package]
name    = "omega-server"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "omega-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
dotenvy      = "0.15"
axum         = { version = "0.8", features = ["ws"] }
tower-http   = { version = "0.6", features = ["fs"] }
clap         = { version = "4", features = ["derive"] }
tokio        = { version = "1", features = ["macros", "rt-multi-thread", "rt", "signal", "sync", "fs", "net", "time"] }
serde_json   = "1"
serde        = { version = "1", features = ["derive"] }
regex        = "1"
mutants      = "0.0.4" # #[mutants::skip] attribute for equivalent-mutation suppression
omega-agent    = { path = "../omega-agent" }
omega-store    = { path = "../omega-store" }
omega-core     = { path = "../omega-core" }
omega-types    = { path = "../omega-types" }
omega-tools    = { path = "../omega-tools" }
tokio-util   = "0.7"          # CancellationToken used to cancel a turn
futures      = "0.3"          # StreamExt for forwarding agent stream to WS
chrono       = { version = "0.4", default-features = false, features = ["clock"] }  # ISO timestamps for server_stopped

[dev-dependencies]
assert_cmd          = "2"
insta               = { version = "1", features = ["json", "redactions"] }
reqwest             = { version = "0.13", default-features = false, features = ["json", "query"] }
tempfile            = "3"
tokio               = { version = "1", features = ["macros", "rt"] }
futures             = "0.3"
tokio-tungstenite   = "0.29"     # WS test client (matches axum 0.8's tungstenite version)
omega-core          = { path = "../omega-core" }
omega-store         = { path = "../omega-store" }
omega-types         = { path = "../omega-types" }   # for ws_message unit tests + integration tests
omega-agent         = { path = "../omega-agent" }       # for tool_use test transcripts
omega-test-fixtures = { path = "../omega-test-fixtures" }
omega-tools         = { path = "../omega-tools" }         # MonitorManager for test ActiveSession construction
serde_json          = "1"
nix                 = { version = "0.31", default-features = false, features = ["signal"] }  # SIGTERM in graceful_shutdown integration test
