[package]
name    = "omega-tools"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
omega-core = { path = "../omega-core" }
serde_json = "1"
tokio      = { version = "1", features = ["sync", "time", "macros", "rt", "rt-multi-thread", "process", "io-util", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Phase 1d.0b additions — wired alongside the tool implementations that use them.
chrono  = { version = "0.4", default-features = false, features = ["clock"] }
regex   = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "query"] }
sha2    = "0.10"
hex     = "0.4"

# Phase 1d.0d additions — pure-Rust replacements for rg/fd subprocesses.
ignore  = "0.4"   # BurntSushi's directory-traversal engine (the core of ripgrep)
globset = "0.4"   # BurntSushi's compiled glob matching
mutants = "0.0.4" # #[mutants::skip] attribute for equivalent-mutation suppression

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["full", "test-util"] }
