[package]
name    = "omega-types"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
uuid       = { version = "1", features = ["serde"] }

[dev-dependencies]
insta      = { version = "1", features = ["json", "redactions"] }
