[package]
name    = "omega-web"
version = "0.1.0"
edition = "2024"
publish = false

# Standalone Cargo workspace — intentionally NOT a member of `rust/Cargo.toml`.
# The reason: `cargo test --workspace` (run by `just rust-gate`) defaults to
# the host target, but `leptos` with the `csr` feature only builds for
# `wasm32-unknown-unknown`. Detaching keeps the rust-side gate green and
# lets `trunk build` invoke its own `cargo` against the wasm target without
# tripping over host-only deps. Type sharing with the backend is preserved
# by the path-dep on `omega-protocol` below.
[workspace]

[[bin]]
name = "omega-web"
path = "src/main.rs"

[dependencies]
# Versions pinned against transitive resolution of leptos 0.8.19 to avoid
# duplicate-version builds.
leptos                   = { version = "=0.8.19", features = ["csr"] }
wasm-bindgen             = "=0.2.120"
web-sys                  = { version = "=0.3.97", features = [
    "WebSocket",
    "MessageEvent",
    "Window",
    "Location",
    "BinaryType",
    "Document",
    "HtmlInputElement",
] }
console_error_panic_hook = "=0.1.7"
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"
omega-protocol           = { path = "../../rust/crates/omega-protocol" }

# HTTP client for `GET /api/sessions` (Phase 3.2). Already a transitive dep
# via leptos's `server_fn`; pinning 0.6.0 keeps the resolution single-version.
# The `json` feature pulls in serde_json (already a direct dep). The `http`
# feature provides the `Request::get/post` builders.
gloo-net                 = { version = "=0.6.0", default-features = false, features = ["http", "json"] }
wasm-bindgen-futures     = "=0.4.70"

# Tests run as wasm32 under `wasm-bindgen-test-runner` (Node backend).
# The exact-pin matches the `wasm-bindgen 0.2.120` resolution above —
# wasm-bindgen-test 0.3.70 has `wasm-bindgen = "=0.2.120"` as a hard
# requirement. Do not change one without changing the other.
[dev-dependencies]
wasm-bindgen-test = "=0.3.70"

# Smaller wasm bundle for production.
[profile.release]
opt-level = "s"
lto       = true
codegen-units = 1
