[package]
name    = "omega-web"
version = "0.1.0"
edition = "2024"
publish = false

# Standalone Cargo workspace — intentionally NOT a member of `rust/Cargo.toml`.
# The reason: `cargo test --workspace` (run by `just rust-gate`) defaults to
# the host target, but `leptos` with the `csr` feature only builds for
# `wasm32-unknown-unknown`. Detaching keeps the rust-side gate green and
# lets `trunk build` invoke its own `cargo` against the wasm target without
# tripping over host-only deps. Type sharing with the backend is preserved
# by the path-dep on `omega-types` below.
[workspace]

# Phase 3.6: split into a thin lib + bin so host-target snapshot tests
# (insta, `tests/snapshots.rs`) can pull in the components without
# building the whole binary path. The bin is a 5-line shim that calls
# `omega_web::run()`.
[lib]
name = "omega_web"
path = "src/lib.rs"

[[bin]]
name = "omega-web"
path = "src/main.rs"

# Phase 3.6 — `csr` and `ssr` are mutually exclusive in leptos's
# crate-feature design. The default is `csr` (what trunk + the bin use).
# Snapshot tests flip via
# `cargo test --no-default-features --features ssr`
# from the `web-leptos-snapshots` recipe.
[features]
default = ["csr"]
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]

[dependencies]
# Versions pinned against transitive resolution of leptos 0.8.19 to avoid
# duplicate-version builds.
leptos                   = { version = "=0.8.19", default-features = false }
js-sys                   = "=0.3.98"
wasm-bindgen             = "=0.2.121"
web-sys                  = { version = "=0.3.98", features = [
    "WebSocket",
    "MessageEvent",
    "Window",
    "Location",
    "BinaryType",
    "Document",
    "HtmlInputElement",
    # Phase 3.3 — feed scroll seam: NodeRef<html::Div> resolves to
    # `HtmlDivElement`; auto-scroll uses `Element::scroll_into_view`
    # and `Element::{scrollTop, clientHeight, scrollHeight}`.
    # `Element` and `HtmlElement` would already be pulled by
    # `HtmlInputElement` transitively; listing them explicitly makes
    # the dependency intent obvious for the next reader.
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "HtmlTextAreaElement",
    # Phase 3.4 — composer model + effort dropdowns are native
    # `<select>` elements; `KeyboardEvent` is read in the textarea's
    # `on:keydown` handler for Enter/Tab/Arrow navigation.
    "HtmlSelectElement",
    "KeyboardEvent",
    # Phase 3.6 — markdown post-mount enhancement walks `<pre>`
    # blocks. `NodeList` is the return type of `Element::query_selector_all`;
    # `DomTokenList` is the return type of `Element::class_list`.
    "NodeList",
    "Node",
    "DomTokenList",
] }
console_error_panic_hook = "=0.1.7"
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"
omega-types              = { path = "../../rust/crates/omega-types" }

# HTTP client for `GET /api/sessions` (Phase 3.2). Already a transitive dep
# via leptos's `server_fn`; pinning 0.6.0 keeps the resolution single-version.
# The `json` feature pulls in serde_json (already a direct dep). The `http`
# feature provides the `Request::get/post` builders.
gloo-net                 = { version = "=0.6.0", default-features = false, features = ["http", "json"] }
# Version pin only — not imported directly. wasm-bindgen-futures 0.4.71
# corresponds to wasm-bindgen 0.2.121; pinning here ensures that gloo-net,
# leptos, and any_spawner all resolve to the same version and don't pull in
# a mismatched wasm-bindgen ABI. Do not change independently of wasm-bindgen.
wasm-bindgen-futures     = "=0.4.71"

# Phase 3.6 — markdown rendering.
#
# pulldown-cmark chosen over comrak after measuring the wasm bundle
# delta (see Phase 3.6 done record): pulldown-cmark adds ~64 KB after
# `wasm-opt -Oz` against an assistant-turn fixture; comrak adds
# ~140 KB+. The HTML-escape filter for inline `Event::Html` /
# `Event::InlineHtml` is implemented in `src/markdown.rs` (mirrors
# SolidJS's `marked.use({ renderer })` HTML-escape override).
#
# `default-features = false` strips out the bundled crates set we
# don't need (`getopts`-style CLI helpers via `simd` etc.). `html`
# is the renderer; `gen-tests` and friends are intentionally absent.
pulldown-cmark           = { version = "=0.13.3", default-features = false, features = ["html"] }

# `#[mutants::skip]` attribute for equivalent-mutation suppression
# (e.g. `markdown::render_options` where `T | S == T ^ S` for disjoint
# bitflag bits, making the `| → ^` mutation value-equivalent and
# uncatchable by any test).
mutants                  = "0.0.4"

# Tests run as wasm32 under `wasm-bindgen-test-runner` (Node backend).
# The exact-pin matches the `wasm-bindgen 0.2.121` resolution above —
# wasm-bindgen-test 0.3.71 has `wasm-bindgen = "=0.2.121"` as a hard
# requirement. Do not change one without changing the other.
[dev-dependencies]
wasm-bindgen-test = "=0.3.71"
# Phase 3.6 — host-target snapshot harness (TEST-ARCH-5). Pinned at
# the latest 1.x at the time of authoring.
insta             = { version = "=1.47.2", features = ["yaml"] }

# cargo-machete: wasm-bindgen-futures is a version pin, not a direct import.
# See comment next to the dep declaration above.
[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]

# Smaller wasm bundle for production.
[profile.release]
opt-level = "s"
lto       = true
codegen-units = 1
