[package]
name    = "omega-agent"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
omega-types    = { path = "../omega-types" }
omega-core     = { path = "../omega-core" }
omega-store    = { path = "../omega-store" }
omega-tools    = { path = "../omega-tools" }

async-stream = "0.3"
mutants       = "0.0.4" # #[mutants::skip] attribute for equivalent-mutation suppression
chrono       = { version = "0.4", default-features = false, features = ["clock"] }
futures      = "0.3"
serde_json   = "1"
tokio        = { version = "1", features = ["sync", "time", "macros", "rt", "fs"] }
tokio-util   = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tempfile     = "3"
tokio        = { version = "1", features = ["full", "test-util"] }
async-trait  = "0.1"
