[package]
name    = "omega-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "omega"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
# Phase 1d.0b will re-introduce: omega-{protocol,core,store,tools,agent},
# tokio (full), serde_json — alongside the agent wiring code that uses them.
