[package]
name    = "omega-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "omega"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap         = { version = "4", features = ["derive"] }
tokio        = { version = "1", features = ["full"] }
futures      = "0.3"
chrono       = { version = "0.4", features = ["clock"] }
omega-core   = { path = "../omega-core" }
omega-store  = { path = "../omega-store" }
omega-agent  = { path = "../omega-agent" }
omega-protocol = { path = "../omega-protocol" }
tokio-util   = { version = "0.7", features = ["rt"] }
