[package]
name    = "omega-mock-server"
version = "0.1.0"
edition.workspace = true

# This crate exists *only* to provide a deterministic test fixture binary
# (`mock-omega-server`) for the Playwright real-server suite.  It wraps the
# production `omega-server` with a hard-coded `MockProvider` that mirrors the
# routing logic from the historical `e2e/fixtures/real-server.ts` fixture, plus
# a tiny control HTTP server on a separate port for test inspection.
#
# Not shipped to end users.  Not depended on by any other crate.

[[bin]]
name = "mock-omega-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum         = { version = "0.8" }
clap         = { version = "4", features = ["derive"] }
futures      = "0.3"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }
omega-core     = { path = "../omega-core" }
omega-protocol = { path = "../omega-protocol" }
omega-server   = { path = "../omega-server" }
