[package]
name    = "omega-server"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "omega-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum         = { version = "0.8", features = ["ws"] }
tower-http   = { version = "0.6", features = ["fs"] }
clap         = { version = "4", features = ["derive"] }
tokio        = { version = "1", features = ["full"] }
serde_json   = "1"
serde        = { version = "1", features = ["derive"] }
regex        = "1"
mutants      = "0.0.3" # #[mutants::skip] attribute for equivalent-mutation suppression
omega-agent  = { path = "../omega-agent" }
omega-store  = { path = "../omega-store" }
omega-core   = { path = "../omega-core" }

[dev-dependencies]
reqwest      = { version = "0.12", default-features = false, features = ["json"] }
tempfile     = "3"
tokio        = { version = "1", features = ["full"] }
futures      = "0.3"
omega-core   = { path = "../omega-core" }
omega-store  = { path = "../omega-store" }
