[package]
name    = "omega-store"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
omega-core     = { path = "../omega-core" }
omega-protocol = { path = "../omega-protocol" }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio          = { version = "1", features = ["fs", "io-util", "macros", "rt"] }
chrono         = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rand           = "0.9"
regex          = "1"
thiserror      = "2"

[dev-dependencies]
tokio    = { version = "1", features = ["full"] }
tempfile = "3"
omega-protocol = { path = "../omega-protocol" }
