[package]
name    = "omega-store"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[features]
# Enables ts-rs bindings; also activates omega-core/ts-bindings (which
# in turn activates omega-protocol/ts-bindings) so ContextRecord's
# Role and ContentBlock fields can reference their generated types.
ts-bindings = ["dep:ts-rs", "omega-core/ts-bindings"]

[dependencies]
omega-core     = { path = "../omega-core" }
omega-protocol = { path = "../omega-protocol" }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio          = { version = "1", features = ["fs", "io-util", "macros", "rt"] }
chrono         = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rand           = "0.9"
regex          = "1"
thiserror      = "2"
ts-rs          = { version = "12", optional = true, features = ["serde-compat"] }

[dev-dependencies]
tokio    = { version = "1", features = ["full"] }
tempfile = "3"
omega-protocol = { path = "../omega-protocol" }
