[package]
name    = "omega-store"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
omega-types    = { path = "../omega-types" }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio          = { version = "1", features = ["fs", "io-util", "macros", "rt"] }
chrono         = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rand           = "0.10"
regex          = "1"
thiserror      = "2"

[dev-dependencies]
tokio    = { version = "1", features = ["full"] }
tempfile = "3"
omega-types = { path = "../omega-types" }
