[package]
name    = "omega-tools"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
omega-core = { path = "../omega-core" }
serde_json = "1"
tokio      = { version = "1", features = ["sync", "time", "macros", "rt", "rt-multi-thread", "process", "io-util", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Phase 1d.0b additions — wired alongside the tool implementations that use them.
regex   = "1"
reqwest = { version = "0.12", features = ["json"] }
sha2    = "0.10"
hex     = "0.4"

# Phase 1d.0d additions — pure-Rust replacements for rg/fd subprocesses.
ignore  = "0.4"   # BurntSushi's directory-traversal engine (the core of ripgrep)
globset = "0.4"   # BurntSushi's compiled glob matching

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["full", "test-util"] }
